-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.4.0, Lustre 2.4.1
-
None
-
3
-
5244
This issue was created by maloo for Oleg Drokin <green@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/1e253cd6-17c2-11e2-a41f-52540035b04c.
The sub-test test_32a failed with the following error:
CMD: client-20-ib mount -t lustre -o loop,exclude=t32fs-OST0000 /tmp/t32/mdt /tmp/t32/mnt/mdt
client-20-ib: mount.lustre: mount /dev/loop0 at /tmp/t32/mnt/mdt failed: No such file or directory
client-20-ib: Is the MGS specification correct?
client-20-ib: Is the filesystem name correct?
client-20-ib: If upgrading, is the copied client log valid? (see upgrade docs)
conf-sanity test_32a: @@@@@@ FAIL: Mounting the MDT
test_32a failed with 1
Info required for matching: conf-sanity 32a