LU-2200 obdclass: Only search forward for dash in fsname

Because whole options line gets passed to exclude processing, don't
search from end of passed in argument to determine fsname at
beginning.

Re-enable conf-sanity/32 as this should now work.

Test-Parameter: nettypes=o2ib testlist=conf-sanity

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Ibc43417cb71581198e3516c1e431c0d3f668f1e0